# streaming-udp-video

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.ninja  cmake_install.cmake  rules.ninja
.cmake/api/v1/reply/: cache-v2-31b70dd643533c9dd7f0.json  cache-v2-51da4ad2bb214a432f3f.json  cache-v2-905ebc7713721026084b.json  cmakeFiles-v1-a2d39f21163ae50bdc80.json  codemodel-v2-de9814f1f0d90571ff9b.json  index-2022-01-25T11-03-23-0363.json  index-2022-01-25T13-36-38-0386.json  index-2022-01-25T14-07-36-0321.json  target-Receiver-Debug-622118b9303df37421fc.json  target-Sender-Debug-f66f90e61ed2f3afbd41.json
src/: receiver.cpp  sender.cpp
src/receiver/: receiver_socket.cpp  receiver_socket.h
src/sender/: sender_socket.cpp  sender_socket.h
src/video/: video_capture.cpp
